# Brutalshell

./: CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: cmake-single-platform.yml  pytest.yml
helper/: .gitignore  CMakeLists.txt  helper.h
helper/src/: connect_daemon.c  get_session.c  main.c  send_daemon.c  set_pty.c
helper/test/: main.c  test_cleanup_resources.c
src/: main.py  vllm.py
src/test/: test_vllm.py
test/: CMakeLists.txt
test/helper/: CMakeLists.txt  test_cleanup_resources.c
test/wrapper/: CMakeLists.txt  main.c  test_connect_daemon.c  test_get_configure.c
wrapper/: CMakeLists.txt  README.md  TODO.md  wrapper.h
wrapper/src/: b_write.c  connect_daemon.c  dump_ringbuf.c  get_configure.c  get_session.c  main.c  nb_read.c  nb_write.c  send_daemon.c  set_nonblocking.c  usage.c
