[project]
name = "brutalshell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyte>=0.8.2",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]
[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]
addopts = ["-ra"]
